--- a/lintie/html/arch/jj1.html
+++ b/lintie/html/arch/jj1.html
@@ -8,7 +8,7 @@
 <body>
 <div id='preview-contents' class='note-content'>
     <blockquote>
-        <p>天覆者凡画皆冒于其下</p>
+        <p>天覆者, 凡画皆冒于其下</p>
     </blockquote>
     <hr>
 </div>
