--- a/lintie/html/arch/jj6.html
+++ b/lintie/html/arch/jj6.html
@@ -8,7 +8,7 @@
 <body>
 <div id='preview-contents' class='note-content'>
     <blockquote>
-        <p>让左者，左高右低。</p>
+        <p>直卓者, 中竖宜正</p>
     </blockquote>
     <hr>
 </div>
