--- a/lintie/html/arch/jj2.html
+++ b/lintie/html/arch/jj2.html
@@ -8,7 +8,7 @@
 <body>
 <div id='preview-contents' class='note-content'>
     <blockquote>
-        <p>地载者，有画皆托于其上。</p>
+        <p>地载者, 有画皆托于其上。</p>
     </blockquote>
     <hr>
 </div>
