--- a/lintie/html/arch/jj3.html
+++ b/lintie/html/arch/jj3.html
@@ -8,7 +8,7 @@
 <body>
 <div id='preview-contents' class='note-content'>
     <blockquote>
-        <p>让左者，左高右低。</p>
+        <p>让左者, 左昂右低 </p>
     </blockquote>
     <hr>
 </div>
