--- a/lintie/html/arch/jj5.html
+++ b/lintie/html/arch/jj5.html
@@ -8,7 +8,7 @@
 <body>
 <div id='preview-contents' class='note-content'>
     <blockquote>
-        <p>让左者，左高右低。</p>
+        <p>横担者, 中画宜长</p>
     </blockquote>
     <hr>
 </div>
