--- a/lintie/html/arch/jj0.html
+++ b/lintie/html/arch/jj0.html
@@ -3,7 +3,12 @@
 <head><title>间架结构摘要九十二法</title>
     <meta charset='utf-8'>
     <link href='https://dn-maxiang.qbox.me/res-min/themes/marxico.css' rel='stylesheet'>
-    <style></style>
+    <style>
+        *:not(input,textarea) {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none; /* Disable selection/Copy of UIWebView */
+        }
+    </style>
 </head>
 <body>
 <div id='preview-contents' class='note-content'>
